Version 1.3.0b2 - xx xxx 2009

  * Expose RetsVersionToString to SWIG languages. Ticket #92.

  * Expose Raw RETS enhancement to .NET. Ticket #93.

Version 1.3.0b1 - 06 Jan 2009

  * Converted the http client model to allow for parallel
    search requests. Ticket #73.

  * Report XML parse error "no element found" as an http
    exception when there is no more data on the stream.
    Ticket #75.

  * Added RETS 1.7 checks to example code. Ticket #58.

  * Propagate Rets Exceptions up to PHP. Ticket #81.

  * Throw an exception when trying to dereference a null
    URL. Ticket #84.

  * Add API to allow raw RETS data to be returned to a stream.
    Ticket #85.

  * Add GetObjectResponse::GetHttpResponse() and GetErrorText().
    Ticket #86.

  * Add RetsSession::MODE_NO_SSL_VERIFY to disable SSL
    verification. Ticket #87.

  * Add API to allow raw RETS data to be reinjected into the
    parse stream for C++ and Java. Ticket #90.

  * Configure fails if Java not installed. Ticket #91.

Version 1.2.5 - 26 Nov 2008

  * Expose RETS_XML_UTF8_ENCODING to SWIG languages.
    Ticket #80.

  * Expose RetsSession::SetTimeout() to SWIG languages.
    Ticket #82.

  * Added "Y" as a valid value for truth in boolean comparisons in
    MetadataElements.

Version 1.2.4 - 17 Nov 2008

  * Add RetsSession.SetModeFlags to allow caching to be enabled
    in streaming mode (RetsSession::MODE_CACHE), to disable
    streaming mode (RetsSession::MODE_NO_STREAM), and to disable
    the "Expect: 100 Continue" header (RetsSession::MODE_NO_EXPECT).
    Tickets #59, #77 and #79.

  * Add RetsSession.SetTimeout() to establish a timeout value
    with libCURL. Ticket #68.

  * Add UTF-8 as an accetable character encoding.
    Ticket #80.

Version 1.2.3 - 9 Sep 2008

  * Added test-network target and httpServer to test actual 
    network activity in the test harness. Tickets #70 and #74.

  * Expose RetsSession.SetHttpLogName() to all languages. Ticket #71.

Version 1.2.2 - 29 Aug 2008
