@@ -1,2 +1,2 @@
-VERSION = 1.3.0
-HEX_VERSION = 010300
+VERSION = 1.3.1
+HEX_VERSION = 010301
